sort.basic.lessons.sort.basic.bubble.AlgBubbleSort3.scala.error
AlgBubbleSort3:4: error: '(' expected but identifier found.
	while switch=true{
              ^AlgBubbleSort3:16: error: illegal start of simple expression
}
^